--- a/00_PyTorch_DeepLearning.ipynb
+++ b/00_PyTorch_DeepLearning.ipynb
@@ -113,7 +113,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# load the training dataset (excluding rows with null values)\n",
+    "# load the training dataset (droping rows with null values)\n",
     "penguins = pd.read_csv('../../DATA/penguins.csv').dropna()\n",
     "\n",
     "# Deep Learning models work best when features are on similar scales\n",
